fleshed out createDivs function still needs work.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div class="header">
             <p><span class="header-title">Etch A Sketch</span></p>
         </div>
-        <div class="etchpad">
+        <div class="etchpad" id="container">
+
 
         </div>
 
