--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch A Sketch</title>
-    <link rel="stylesheet" src="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js" defer></script>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
             <p><span class="header-title">Etch A Sketch</span></p>
         </div>
         <div class="etchpad" id="container">
-
+        </div>
+        <div class="controls">
 
         </div>
-
     </div>
-    
 </body>
+
 </html>
