--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Etch A Sketch</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap" rel="stylesheet">
     <script src="scripts.js" defer></script>
 </head>
 
@@ -23,14 +23,17 @@
         <div class="etchpad" id="container">
         </div>
         <div class="instructions">
-            <p>To begin just click each square. If you want to create a new grid you can use the input box below to change size up to 64 cells. Click reset if you get stuck.</p>
+            <p>To begin just click each square. If you want to create a new grid you can use the input box below to
+                change size up to 64 cells. Click reset if you get stuck.</p>
         </div>
         <div class="controls">
             <div class="button-controls">
-                <button onclick="setColor('black')">Black</button><button onclick="setColor('white')">Eraser</button><button onclick="randomizeColor()">Random</button><button onclick="resetDivs()">Reset</button>
+                <button onclick="setColor('black')">Black</button><button
+                    onclick="setColor('white')">Eraser</button><button onclick="randomizeColor()">Random</button><button
+                    onclick="resetDivs()">Reset</button>
             </div>
             <div class="size-input">
-                <input name="sizeinput" type="text" maxlength="10" id="szinput" class="controls-input"/>
+                <input name="sizeinput" type="text" maxlength="10" id="szinput" class="controls-input" />
                 <button onclick="getValue()">Change Size</button>
             </div>
         </div>
