--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap" rel="stylesheet">
-    <script
-      src="https://kit.fontawesome.com/4c536a6bd5.js"
-      crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Zen+Loop&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4c536a6bd5.js" crossorigin="anonymous"></script>
     <script src="scripts.js" defer></script>
 </head>
 
@@ -38,7 +34,7 @@
             </div>
             <div class="size-input">
                 <input name="sizeinput" type="text" maxlength="10" id="szinput" class="controls-input" />
-                <button onclick="getValue()">Change Size</button>
+                <button class="button" onclick="getValue()">Change Size</button>
             </div>
         </div>
     </div>
@@ -47,7 +43,7 @@
             Josh Hartwig
             <a href="https://github.com/joshhartwig" target="_blank">
                 <i class="fab fa-github"></i></a>
-          </p>       
+        </p>
     </div>
 </body>
 
